# zdb

./: LICENSE  README.md  backend.py  pyproject.toml  sample_api_response.json  zdb-run
zdb/: __init__.py  __main__.py  app.py  backend.py
zdb.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
zdb/screens/: __init__.py  adb_screen.py  changelog.py  credits.py  dashboard.py  device_info.py  experimental_screen.py  fastboot_screen.py  splash.py
zdb/styles/: app.tcss
zdb/widgets/: __init__.py  ascii_art.py  command_output.py  status_bar.py
